tests/reference/run-passing_array_01-b2bde68.stderr
semantic error: Function 'test_01_interface' not found or not implemented yet (if it is intrinsic)
  --> tests/errors/passing_array_01.f90:24:16
   |
24 |         ret =  test_01_interface(len,value) ! This raise error as interfaces are strict on matching the number of ranks, so it doesn't find a match.
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
